1999-05-05  Alex Lancaster  <alex@santafe.edu>

	* space.h (Ca2d): Remove CREATABLE tag in protocol definition,
	since this protocol is intended to be abstract.

1999-05-04  Alex Lancaster  <alex@santafe.edu>

	* Discrete2d.m ([Discrete2d -_lispInLatticeObjects_:]): Use
	putObject:atX:Y: method rather than discrete2dSiteAt macro, so can
	be overriden in subclasses.
	([Discrete2d -hdf5In:]): Likewise.
	([Discrete2d -_lispOutLatticeObjects_:]): Use getObjectAtX:Y:
	method rather than discrete2dSiteAt macro.
	([Discrete2d -hdf5OutDeep:]): Likewise.
	
1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d -hdf5InCreate:]): Use
	checkDatasetName: "lattice" instead of checkName: "ivars"
	so that ivars aren't required.
	([Discrete2d -hdf5In:]): Don't require ivars group.
	([Discrete2d -_lispInLatticeObjects_:], 
	[Discrete2d -_lispOutLatticeObjects_:]): 
	Use pair for coordinates, not list.
	([Discrete2d -_lispOutLatticeValues_:]): Array encoding was reversed.
	([Discrete2d -hdf5In{Create}]): Uses group shallow encoding
	to separate ivars and lattice.  Implement deep loading.
	([Discrete2d -hdf5Deep:]): Implement.

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d -setSizeX:Y:], [Discrete -createEnd]):
	Use raiseEvent macro instead of method invocation.
	([Discrete2d -lispInCreate:]): Move to creating phase.
	([Discrete2d -hdf5InCreate:]): Implement.
	([Discrete2d -hdf5In:]): Implement.
	([Discrete2d -_lispInLatticeValues_:], [Discrete2d
	-_lispOutLatticeObjects_:]): Don't use tempArray.
	([Discrete2d -hdf5OutShallow:]): Implement

	* Discrete2d.h (Discrete2d):  -{{hdf5,lisp}{In,Out}}: Declare.

	* space.h (Discrete2d): Remove setUseObjects and setUseValues.

	* Discrete2d.m ([Discrete2d +createBegin:]): Remove.
	([Discrete2d -setUse{Objects,Values}]): Remove.
	([Discrete2d -_lispInAttr_:]): Remove.
	([Discrete2d -_lispInLatticeValues_:]): Renamed from